crates/djls-ast/src/snapshots/djls_ast__parser__tests__parse_comments.snap
---
source: crates/djls-ast/src/parser.rs
expression: ast
---
nodes:
  - Html:
      Comment: HTML comment
  - Django:
      Comment: Django comment
  - Script:
      Element:
        attributes:
          script: Boolean
        children:
          - Script:
              Comment:
                content: JS single line
                kind: SingleLine
          - Script:
              Comment:
                content: "JS multi\n        line"
                kind: MultiLine
  - Style:
      Element:
        attributes: {}
        children:
          - Style:
              Comment: CSS comment
