crates/djls-ast/src/snapshots/djls_ast__parser__tests__parse_django_block.snap
---
source: crates/djls-ast/src/parser.rs
expression: ast
---
nodes:
  - Django:
      Tag:
        kind: If
        bits:
          - if
          - user.is_staff
        children:
          - Text: Admin
          - Django:
              Tag:
                kind:
                  Other: else
                bits:
                  - else
                children: []
          - Text: User
