crates/djls-ast/src/snapshots/djls_ast__parser__tests__parse_django_variable.snap
---
source: crates/djls-ast/src/parser.rs
expression: ast
---
nodes:
  - Django:
      Variable:
        bits:
          - user
          - name
        filters:
          - name: default
            arguments:
              - Anonymous
          - name: title
            arguments: []
