crates/djls-ast/src/snapshots/djls_ast__parser__tests__parse_full.snap
---
source: crates/djls-ast/src/parser.rs
expression: ast
---
nodes:
  - Html:
      Doctype: "!DOCTYPE"
  - Html:
      Element:
        tag_name: html
        attributes: {}
        children:
          - Html:
              Element:
                tag_name: head
                attributes: {}
                children:
                  - Style:
                      Element:
                        attributes:
                          type:
                            Value: text/css
                        children:
                          - Style:
                              Comment: Style header
                          - Text: ".header "
                          - Text: "{"
                          - Text: "color: blue; }"
                  - Script:
                      Element:
                        attributes:
                          script: Boolean
                          type:
                            Value: text/javascript
                        children:
                          - Script:
                              Comment:
                                content: Init app
                                kind: SingleLine
                          - Text: "const app = "
                          - Text: "{"
                          - Script:
                              Comment:
                                content: Config
                                kind: MultiLine
                          - Text: "debug: true"
                          - Text: "};"
          - Html:
              Element:
                tag_name: body
                attributes: {}
                children:
                  - Html:
                      Comment: Header section
                  - Html:
                      Element:
                        tag_name: div
                        attributes:
                          class:
                            Value: header
                          data-value:
                            Value: "123"
                          disabled: Boolean
                          id:
                            Value: main
                        children:
                          - Django:
                              Tag:
                                kind: If
                                bits:
                                  - if
                                  - user.is_authenticated
                                children:
                                  - Django:
                                      Comment: Welcome message
                                  - Html:
                                      Element:
                                        tag_name: h1
                                        attributes: {}
                                        children:
                                          - Text: "Welcome, "
                                          - Django:
                                              Variable:
                                                bits:
                                                  - user
                                                  - name
                                                filters:
                                                  - name: default
                                                    arguments:
                                                      - Guest
                                                  - name: title
                                                    arguments: []
                                          - Text: "!"
                                  - Django:
                                      Tag:
                                        kind: If
                                        bits:
                                          - if
                                          - user.is_staff
                                        children:
                                          - Html:
                                              Element:
                                                tag_name: span
                                                attributes: {}
                                                children:
                                                  - Text: Admin
