crates/djls-ast/src/snapshots/djls_ast__parser__tests__parse_html_doctype.snap
---
source: crates/djls-ast/src/parser.rs
expression: ast
---
nodes:
  - Html:
      Doctype: "!DOCTYPE"
